--- a/static/styles/lib/bootstrap/scss/_card.scss
+++ b/static/styles/lib/bootstrap/scss/_card.scss
@@ -3,13 +3,13 @@
 //
 
 .card {
-  display: block;
   position: relative;
+  display: block;
   margin-bottom: $card-spacer-y;
-  border: $card-border-width solid $card-border-color;
+  background-color: $card-bg;
   // border: $card-border-width solid $card-border-color;
   @include border-radius($card-border-radius);
-  background-color: $card-bg;
+  border: $card-border-width solid $card-border-color;
 }
 
 .card-block {
@@ -69,10 +69,10 @@
 
 .card-header {
   @include clearfix;
-  margin-bottom: 0;
-  border-bottom: $card-border-width solid $card-border-color; // Removes the default margin-bottom of <hN>
-  background-color: $card-cap-bg;
   padding: $card-spacer-y $card-spacer-x;
+  margin-bottom: 0; // Removes the default margin-bottom of <hN>
+  background-color: $card-cap-bg;
+  border-bottom: $card-border-width solid $card-border-color;
 
   &:first-child {
     @include border-radius($card-border-radius-inner $card-border-radius-inner 0 0);
@@ -81,9 +81,9 @@
 
 .card-footer {
   @include clearfix;
-  border-top: $card-border-width solid $card-border-color;
-  background-color: $card-cap-bg;
   padding: $card-spacer-y $card-spacer-x;
+  background-color: $card-cap-bg;
+  border-top: $card-border-width solid $card-border-color;
 
   &:last-child {
     @include border-radius(0 0 $card-border-radius-inner $card-border-radius-inner);
@@ -115,19 +115,15 @@
 .card-primary {
   @include card-variant($brand-primary, $brand-primary);
 }
-
 .card-success {
   @include card-variant($brand-success, $brand-success);
 }
-
 .card-info {
   @include card-variant($brand-info, $brand-info);
 }
-
 .card-warning {
   @include card-variant($brand-warning, $brand-warning);
 }
-
 .card-danger {
   @include card-variant($brand-danger, $brand-danger);
 }
@@ -136,23 +132,18 @@
 .card-outline-primary {
   @include card-outline-variant($btn-primary-bg);
 }
-
 .card-outline-secondary {
   @include card-outline-variant($btn-secondary-border);
 }
-
 .card-outline-info {
   @include card-outline-variant($btn-info-bg);
 }
-
 .card-outline-success {
   @include card-outline-variant($btn-success-bg);
 }
-
 .card-outline-warning {
   @include card-outline-variant($btn-warning-bg);
 }
-
 .card-outline-danger {
   @include card-outline-variant($btn-danger-bg);
 }
@@ -170,9 +161,9 @@
 //
 
 .card-blockquote {
+  padding: 0;
   margin-bottom: 0;
   border-left: 0;
-  padding: 0;
 }
 
 // Card image
@@ -180,7 +171,6 @@
   // margin: -1.325rem;
   @include border-radius($card-border-radius-inner);
 }
-
 .card-img-overlay {
   position: absolute;
   top: 0;
@@ -196,7 +186,6 @@
 .card-img-top {
   @include border-top-radius($card-border-radius-inner);
 }
-
 .card-img-bottom {
   @include border-bottom-radius($card-border-radius-inner);
 }
@@ -228,15 +217,13 @@
       }
     }
   }
-
 } @else {
-
   @include media-breakpoint-up(sm) {
     $space-between-cards: (2 * $card-deck-margin);
     .card-deck {
       display: table;
-      margin-bottom: $card-spacer-y;
-      width: 100%; // Margin balancing
+      width: 100%;
+      margin-bottom: $card-spacer-y; // Margin balancing
       table-layout: fixed;
       border-spacing: $space-between-cards 0;
 
@@ -246,7 +233,6 @@
         vertical-align: top;
       }
     }
-
     .card-deck-wrapper {
       margin-right: (-$space-between-cards);
       margin-left: (-$space-between-cards);
@@ -290,19 +276,16 @@
           .card-img-top {
             border-top-right-radius: 0;
           }
-
           .card-img-bottom {
             border-bottom-right-radius: 0;
           }
         }
-
         &:last-child {
           @include border-left-radius(0);
 
           .card-img-top {
             border-top-left-radius: 0;
           }
-
           .card-img-bottom {
             border-bottom-left-radius: 0;
           }
@@ -328,8 +311,8 @@
 
 @include media-breakpoint-up(sm) {
   .card-columns {
-    column-gap: $card-columns-sm-up-column-gap;
     column-count: 3;
+    column-gap: $card-columns-sm-up-column-gap;
 
     .card {
       display: inline-block; // Don't let them vertically span multiple columns
