--- a/static/styles/lib/bootstrap/scss/_carousel.scss
+++ b/static/styles/lib/bootstrap/scss/_carousel.scss
@@ -9,8 +9,8 @@
   overflow: hidden;
 
   > .carousel-item {
-    display: none;
     position: relative;
+    display: none;
     transition: .6s ease-in-out left;
 
     // Account for jankitude on images
@@ -23,21 +23,19 @@
     // WebKit CSS3 transforms for supported devices
     @media all and (transform-3d), (-webkit-transform-3d) {
       transition: transform .6s ease-in-out;
-      perspective: 1000px;
       backface-visibility: hidden;
+      perspective: 1000px;
 
       &.next,
       &.active.right {
         left: 0;
         transform: translate3d(100%, 0, 0);
       }
-
       &.prev,
       &.active.left {
         left: 0;
         transform: translate3d(-100%, 0, 0);
       }
-
       &.next.left,
       &.prev.right,
       &.active {
@@ -67,11 +65,9 @@
   > .next {
     left: 100%;
   }
-
   > .prev {
     left: -100%;
   }
-
   > .next.left,
   > .prev.right {
     left: 0;
@@ -80,7 +76,6 @@
   > .active.left {
     left: -100%;
   }
-
   > .active.right {
     left: 100%;
   }
@@ -96,12 +91,12 @@
   top: 0;
   bottom: 0;
   left: 0;
-  opacity: $carousel-control-opacity;
   width: $carousel-control-width;
+  font-size: $carousel-control-font-size;
+  color: $carousel-control-color;
   text-align: center;
   text-shadow: $carousel-text-shadow;
-  color: $carousel-control-color;
-  font-size: $carousel-control-font-size;
+  opacity: $carousel-control-opacity;
   // We can't have this transition here because WebKit cancels the carousel
   // animation if you trip this while in the middle of another animation.
 
@@ -109,7 +104,6 @@
   &.left {
     @include gradient-x($start-color: rgba(0,0,0,.5), $end-color: rgba(0,0,0,.0001));
   }
-
   &.right {
     right: 0;
     left: auto;
@@ -118,31 +112,29 @@
 
   // Hover/focus state
   @include hover-focus {
-    opacity: .9;
-    outline: 0;
-    text-decoration: none;
     color: $carousel-control-color;
+    text-decoration: none;
+    outline: 0;
+    opacity: .9;
   }
 
   // Toggles
   .icon-prev,
   .icon-next {
-    display: inline-block;
     position: absolute;
     top: 50%;
     z-index: 5;
-    margin-top: -($carousel-icon-width / 2);
+    display: inline-block;
     width: $carousel-icon-width;
     height: $carousel-icon-width;
-    line-height: 1;
+    margin-top: -($carousel-icon-width / 2);
     font-family: serif;
+    line-height: 1;
   }
-
   .icon-prev {
     left: 50%;
     margin-left: -($carousel-icon-width / 2);
   }
-
   .icon-next {
     right: 50%;
     margin-right: -($carousel-icon-width / 2);
@@ -153,7 +145,6 @@
       content: "\2039";// SINGLE LEFT-POINTING ANGLE QUOTATION MARK (U+2039)
     }
   }
-
   .icon-next {
     &::before {
       content: "\203a";// SINGLE RIGHT-POINTING ANGLE QUOTATION MARK (U+203A)
@@ -172,34 +163,34 @@
   bottom: 10px;
   left: 50%;
   z-index: 15;
-  margin-left: -($carousel-indicators-width / 2);
-  padding-left: 0;
   width: $carousel-indicators-width;
-  list-style: none;
+  padding-left: 0;
+  margin-left: -($carousel-indicators-width / 2);
   text-align: center;
+  list-style: none;
 
   li {
     display: inline-block;
+    width: $carousel-indicator-size;
+    height: $carousel-indicator-size;
     margin: 1px;
-    border: 1px solid $carousel-indicator-border-color;
-    border-radius: $carousel-indicator-size;
-    background-color: rgba(0,0,0,0);
+    text-indent: -999px;
     cursor: pointer;
     // IE9 hack for event handling
     //
     // Internet Explorer 9 does not properly handle clicks on elements with a `background-color` of `transparent`,
     // so we use `rgba(0,0,0,0)` instead since it's a non-buggy equivalent.
     // See https://developer.mozilla.org/en-US/docs/Web/Events/click#Internet_Explorer
-    width: $carousel-indicator-size; // IE9
-    height: $carousel-indicator-size;
-    text-indent: -999px;
+    background-color: rgba(0,0,0,0); // IE9
+    border: 1px solid $carousel-indicator-border-color;
+    border-radius: $carousel-indicator-size;
   }
 
   .active {
-    margin: 0;
-    background-color: $carousel-indicator-active-bg;
     width: $carousel-indicator-active-size;
     height: $carousel-indicator-active-size;
+    margin: 0;
+    background-color: $carousel-indicator-active-bg;
   }
 }
 
@@ -216,9 +207,9 @@
   z-index: 10;
   padding-top: 20px;
   padding-bottom: 20px;
+  color: $carousel-caption-color;
   text-align: center;
   text-shadow: $carousel-text-shadow;
-  color: $carousel-caption-color;
 
   .btn {
     text-shadow: none; // No shadow for button elements in carousel-caption
@@ -235,16 +226,14 @@
   .carousel-control {
     .icon-prev,
     .icon-next {
-      margin-top: -($carousel-control-sm-up-size / 2);
       width: $carousel-control-sm-up-size;
       height: $carousel-control-sm-up-size;
+      margin-top: -($carousel-control-sm-up-size / 2);
       font-size: $carousel-control-sm-up-size;
     }
-
     .icon-prev {
       margin-left: -($carousel-control-sm-up-size / 2);
     }
-
     .icon-next {
       margin-right: -($carousel-control-sm-up-size / 2);
     }
