--- a/static/styles/lib/bootstrap/scss/_custom-forms.scss
+++ b/static/styles/lib/bootstrap/scss/_custom-forms.scss
@@ -10,10 +10,10 @@
 // Base class takes care of all the key behavioral aspects.
 
 .custom-control {
-  display: inline-block;
   position: relative;
-  cursor: pointer;
+  display: inline-block;
   padding-left: $custom-control-gutter;
+  cursor: pointer;
 
   + .custom-control {
     margin-left: $custom-control-spacer-x;
@@ -22,12 +22,12 @@
 
 .custom-control-input {
   position: absolute;
-  opacity: 0; // Put the input behind the label so it doesn't overlay text
-  z-index: -1;
+  z-index: -1; // Put the input behind the label so it doesn't overlay text
+  opacity: 0;
 
   &:checked ~ .custom-control-indicator {
-    background-color: $custom-control-checked-indicator-bg;
     color: $custom-control-checked-indicator-color;
+    background-color: $custom-control-checked-indicator-bg;
     @include box-shadow($custom-control-checked-indicator-box-shadow);
   }
 
@@ -37,20 +37,20 @@
   }
 
   &:active ~ .custom-control-indicator {
-    background-color: $custom-control-active-indicator-bg;
     color: $custom-control-active-indicator-color;
+    background-color: $custom-control-active-indicator-bg;
     @include box-shadow($custom-control-active-indicator-box-shadow);
   }
 
   &:disabled {
     ~ .custom-control-indicator {
-      background-color: $custom-control-disabled-indicator-bg;
       cursor: $custom-control-disabled-cursor;
+      background-color: $custom-control-disabled-indicator-bg;
     }
 
     ~ .custom-control-description {
-      cursor: $custom-control-disabled-cursor;
       color: $custom-control-disabled-description-color;
+      cursor: $custom-control-disabled-cursor;
     }
   }
 }
@@ -60,18 +60,18 @@
 // Generates a shadow element to create our makeshift checkbox/radio background.
 
 .custom-control-indicator {
-  display: block;
   position: absolute;
   top: .25rem;
   left: 0;
-  background-color: $custom-control-indicator-bg;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: $custom-control-indicator-bg-size;
+  display: block;
   width: $custom-control-indicator-size;
   height: $custom-control-indicator-size;
   pointer-events: none;
   user-select: none;
+  background-color: $custom-control-indicator-bg;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: $custom-control-indicator-bg-size;
   @include box-shadow($custom-control-indicator-box-shadow);
 }
 
@@ -135,26 +135,26 @@
 // Includes IE9-specific hacks (noted by ` \9`).
 
 .custom-select {
-  $select-border-width: ($border-width * 2);
   display: inline-block;
-  border: $custom-select-border-width solid $custom-select-border-color;
+  max-width: 100%;
+  $select-border-width: ($border-width * 2);
+  height: calc(#{$input-height} - #{$select-border-width});
+  padding: $custom-select-padding-y ($custom-select-padding-x + $custom-select-indicator-padding) $custom-select-padding-y $custom-select-padding-x;
+  padding-right: $custom-select-padding-x \9;
+  color: $custom-select-color;
+  vertical-align: middle;
   background: $custom-select-bg $custom-select-indicator no-repeat right $custom-select-padding-x center;
   background-image: none \9;
   background-size: $custom-select-bg-size;
-  padding: $custom-select-padding-y ($custom-select-padding-x + $custom-select-indicator-padding) $custom-select-padding-y $custom-select-padding-x;
-  padding-right: $custom-select-padding-x \9;
-  max-width: 100%;
-  height: calc(#{$input-height} - #{$select-border-width});
-  vertical-align: middle;
-  color: $custom-select-color;
+  border: $custom-select-border-width solid $custom-select-border-color;
   @include border-radius($custom-select-border-radius);
   // Use vendor prefixes as `appearance` isn't part of the CSS spec.
-  -webkit-appearance: none;
   -moz-appearance: none;
+  -webkit-appearance: none;
 
   &:focus {
-    outline: none;
     border-color: $custom-select-focus-border-color;
+    outline: none;
     @include box-shadow($custom-select-focus-box-shadow);
 
     &::-ms-value {
@@ -163,15 +163,15 @@
       // the selected option text when the (still closed) <select> receives focus
       // in IE and (under certain conditions) Edge.
       // See https://github.com/twbs/bootstrap/issues/19398.
-      background-color: $input-bg;
       color: $input-color;
+      background-color: $input-bg;
     }
   }
 
   &:disabled {
-    background-color: $custom-select-disabled-bg;
-    cursor: $cursor-disabled;
     color: $custom-select-disabled-color;
+    cursor: $cursor-disabled;
+    background-color: $custom-select-disabled-bg;
   }
 
   // Hides the default caret in IE11
@@ -197,19 +197,19 @@
 // Custom file input.
 
 .custom-file {
-  display: inline-block;
   position: relative;
-  cursor: pointer;
+  display: inline-block;
   max-width: 100%;
   height: $custom-file-height;
+  cursor: pointer;
 }
 
 .custom-file-input {
-  opacity: 0;
-  margin: 0;
   min-width: $custom-file-width;
   max-width: 100%;
+  margin: 0;
   filter: alpha(opacity = 0);
+  opacity: 0;
 
   &:focus ~ .custom-file-control {
     @include box-shadow($custom-file-focus-box-shadow);
@@ -222,13 +222,13 @@
   right: 0;
   left: 0;
   z-index: 5;
-  border: $custom-file-border-width solid $custom-file-border-color;
-  background-color: $custom-file-bg;
-  padding: $custom-file-padding-x $custom-file-padding-y;
   height: $custom-file-height;
+  padding: $custom-file-padding-x $custom-file-padding-y;
   line-height: $custom-file-line-height;
   color: $custom-file-color;
   user-select: none;
+  background-color: $custom-file-bg;
+  border: $custom-file-border-width solid $custom-file-border-color;
   @include border-radius($custom-file-border-radius);
   @include box-shadow($custom-file-box-shadow);
 
@@ -239,18 +239,18 @@
   }
 
   &::before {
-    display: block;
     position: absolute;
     top: -$custom-file-border-width;
     right: -$custom-file-border-width;
     bottom: -$custom-file-border-width;
     z-index: 6;
-    border: $custom-file-border-width solid $custom-file-border-color;
-    background-color: $custom-file-button-bg;
-    padding: $custom-file-padding-x $custom-file-padding-y;
+    display: block;
     height: $custom-file-height;
+    padding: $custom-file-padding-x $custom-file-padding-y;
     line-height: $custom-file-line-height;
     color: $custom-file-button-color;
+    background-color: $custom-file-button-bg;
+    border: $custom-file-border-width solid $custom-file-border-color;
     @include border-radius(0 $custom-file-border-radius $custom-file-border-radius 0);
   }
 
