--- a/static/styles/lib/bootstrap/scss/_input-group.scss
+++ b/static/styles/lib/bootstrap/scss/_input-group.scss
@@ -24,7 +24,6 @@
     @include hover-focus-active {
       z-index: 3;
     }
-
     @if $enable-flex {
       flex: 1;
     } @else {
@@ -55,8 +54,8 @@
   @if not $enable-flex {
     width: 1%;
   }
-  vertical-align: middle;
-  white-space: nowrap; // Match the inputs
+  white-space: nowrap;
+  vertical-align: middle; // Match the inputs
 }
 
 
@@ -70,7 +69,6 @@
 .input-group-lg > .input-group-btn > .btn {
   @extend .form-control-lg;
 }
-
 .input-group-sm > .form-control,
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .btn {
@@ -83,15 +81,15 @@
 //
 
 .input-group-addon {
-  margin-bottom: 0;
-  border: $input-btn-border-width solid $input-group-addon-border-color; // Allow use of <label> elements by overriding our default margin-bottom
-  background-color: $input-group-addon-bg;
   padding: $input-padding-y $input-padding-x;
-  text-align: center;
-  line-height: $input-line-height;
-  color: $input-color;
+  margin-bottom: 0; // Allow use of <label> elements by overriding our default margin-bottom
   font-size: $font-size-base;
   font-weight: normal;
+  line-height: $input-line-height;
+  color: $input-color;
+  text-align: center;
+  background-color: $input-group-addon-bg;
+  border: $input-btn-border-width solid $input-group-addon-border-color;
   @include border-radius($input-border-radius);
 
   // Sizing
@@ -100,7 +98,6 @@
     font-size: $font-size-sm;
     @include border-radius($input-border-radius-sm);
   }
-
   &.form-control-lg {
     padding: $input-padding-y-lg $input-padding-x-lg;
     font-size: $font-size-lg;
@@ -130,11 +127,9 @@
 .input-group-btn:not(:first-child) > .btn-group:not(:last-child) > .btn {
   @include border-right-radius(0);
 }
-
 .input-group-addon:not(:last-child) {
   border-right: 0;
 }
-
 .input-group .form-control:not(:first-child),
 .input-group-addon:not(:first-child),
 .input-group-btn:not(:first-child) > .btn,
@@ -144,7 +139,6 @@
 .input-group-btn:not(:last-child) > .btn-group:not(:first-child) > .btn {
   @include border-left-radius(0);
 }
-
 .form-control + .input-group-addon:not(:first-child) {
   border-left: 0;
 }
@@ -157,8 +151,8 @@
   position: relative;
   // Jankily prevent input button groups from wrapping with `white-space` and
   // `font-size` in combination with `inline-block` on buttons.
-  white-space: nowrap;
   font-size: 0;
+  white-space: nowrap;
 
   // Negative margin for spacing, position for bringing hovered/focused/actived
   // element above the siblings.
@@ -180,7 +174,6 @@
       margin-right: (-$input-btn-border-width);
     }
   }
-
   &:not(:first-child) {
     > .btn,
     > .btn-group {
