--- a/static/styles/lib/chosen/chosen.scss
+++ b/static/styles/lib/chosen/chosen.scss
@@ -3,31 +3,28 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
 
 /* @group Base */
 .chosen-container {
-    display: inline-block;
     position: relative;
+    display: inline-block;
     vertical-align: middle;
     font-size: 13px;
     user-select: none;
     * {
         box-sizing: border-box;
     }
-
     .chosen-drop {
         position: absolute;
         top: 100%;
         z-index: 1010;
-        border: 1px solid #aaa;
-        border-top: zero;
-        box-shadow: 0 4px 5px rgba(#000,.15);
-        background: #fff;
         width: 100%;
+        border: 1px solid #aaa;
+        border-top: 0;
+        background: #fff;
+        box-shadow: 0 4px 5px rgba(#000,.15);
         clip: rect(0,0,0,0);
     }
-
     &.chosen-with-drop .chosen-drop {
         clip: auto;
     }
-
     a{
         cursor: pointer;
     }
@@ -36,14 +33,14 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
         .group-name{
             margin-right: 4px;
             overflow: hidden;
-            text-overflow: ellipsis;
             white-space: nowrap;
-            color: #999;
+            text-overflow: ellipsis;
             font-weight: normal;
+            color: #999999;
             &:after {
+                content: ":";
                 padding-left: 2px;
                 vertical-align: top;
-                content: ":";
             }
         }
     }
@@ -53,72 +50,65 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
 /* @group Single Chosen */
 .chosen-container-single{
     .chosen-single {
-        display: block;
         position: relative;
-        border: 1px solid #aaa;
-        border-radius: 5px;
-        box-shadow: 0 0 3px #fff inset, 0 1px 1px rgba(#000,.1);
-        background: linear-gradient(#fff 20%, #f6f6f6 50%, #eee 52%, #f4f4f4 100%);
-        background-clip: padding-box;
-        background-color: #fff;
+        display: block;
+        overflow: hidden;
         padding: 0 0 0 8px;
         height: 25px;
-        overflow: hidden;
-        text-decoration: none;
-        line-height: 24px;
-        white-space: nowrap;
+        border: 1px solid #aaa;
+        border-radius: 5px;
+        background-color: #fff;
+        background: linear-gradient(#fff 20%, #f6f6f6 50%, #eee 52%, #f4f4f4 100%);
+        background-clip: padding-box;
+        box-shadow: 0 0 3px #fff inset, 0 1px 1px rgba(#000,.1);
         color: #444;
+        text-decoration: none;
+        white-space: nowrap;
+        line-height: 24px;
     }
-
     .chosen-default {
         color: #999;
     }
-
     .chosen-single span {
         display: block;
-        margin-right: 26px;
         overflow: hidden;
+        margin-right: 26px;
         text-overflow: ellipsis;
         white-space: nowrap;
     }
-
     .chosen-single-with-deselect span {
         margin-right: 38px;
     }
-
     .chosen-single abbr {
-        display: block;
         position: absolute;
         top: 6px;
         right: 26px;
-        background: $chosen-sprite -42px 1px no-repeat;
+        display: block;
         width: 12px;
         height: 12px;
+        background: $chosen-sprite -42px 1px no-repeat;
         font-size: 1px;
         &:hover {
             background-position: -42px -10px;
         }
     }
-
     &.chosen-disabled .chosen-single abbr:hover {
         background-position: -42px -10px;
     }
-
     .chosen-single div {
-        display: block;
         position: absolute;
         top: 0;
         right: 0;
+        display: block;
         width: 18px;
         height: 100%;
         b {
             display: block;
-            background: $chosen-sprite no-repeat 0 2px;
             width: 100%;
             height: 100%;
+            background: $chosen-sprite no-repeat 0px 2px;
         }
     }
-
     .chosen-search {
         position: relative;
         z-index: 1010;
@@ -128,25 +118,23 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
 
         input[type="text"] {
             margin: 1px 0;
-            outline: 0;
-            border: 1px solid #aaa;
-            border-radius: 0;
-            background: $chosen-sprite no-repeat 100% -20px;
             padding: 4px 20px 4px 5px;
             width: 100%;
             height: auto;
-            line-height: normal;
-            font-family: sans-serif;
+            outline: 0;
+            border: 1px solid #aaa;
+            background: $chosen-sprite no-repeat 100% -20px;
             font-size: 1em;
+            font-family: sans-serif;
+            line-height: normal;
+            border-radius: 0;
         }
     }
-
     .chosen-drop {
         margin-top: -1px;
         border-radius: 0 0 4px 4px;
         background-clip: padding-box;
     }
-
     &.chosen-container-single-nosearch .chosen-search {
         position: absolute;
         clip: rect(0,0,0,0);
@@ -156,58 +144,52 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
 
 /* @group Results */
 .chosen-container .chosen-results {
+    color: #444;
     position: relative;
+    overflow-x: hidden;
+    overflow-y: auto;
     margin: 0 4px 4px 0;
     padding: 0 0 0 4px;
     max-height: 240px;
-    color: #444;
     -webkit-overflow-scrolling: touch;
-    overflow-y: auto;
-    overflow-x: hidden;
     li {
         display: none;
         margin: 0;
         padding: 5px 6px;
         list-style: none;
         line-height: 15px;
-        -webkit-touch-callout: none;
         word-wrap: break-word;
+        -webkit-touch-callout: none;
         &.active-result {
             display: list-item;
             cursor: pointer;
         }
-
         &.disabled-result {
             display: list-item;
-            cursor: default;
             color: #ccc;
+            cursor: default;
         }
-
         &.highlighted {
             background-color: #3875d7;
             background-image: linear-gradient(#3875d7 20%, #2a62bc 90%);
             color: #fff;
         }
-
         &.no-results {
+            color: #777;
             display: list-item;
             background: #f4f4f4;
-            color: #777;
         }
-
         &.group-result {
             display: list-item;
-            cursor: default;
             font-weight: bold;
+            cursor: default;
         }
-
         &.group-option {
             padding-left: 15px;
         }
-
         em {
-            text-decoration: underline;
             font-style: normal;
+            text-decoration: underline;
         }
     }
 }
@@ -217,17 +199,16 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
 .chosen-container-multi{
     .chosen-choices {
         position: relative;
+        overflow: hidden;
         margin: 0;
+        padding: 0 5px;
+        width: 100%;
+        height: auto;
         border: 1px solid #aaa;
         background-color: #fff;
         background-image: linear-gradient(#eee 1%, #fff 15%);
         cursor: text;
-        padding: 0 5px;
-        width: 100%;
-        height: auto;
-        overflow: hidden;
     }
-
     .chosen-choices li {
         float: left;
         list-style: none;
@@ -237,64 +218,60 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
             white-space: nowrap;
             input[type="text"] {
                 margin: 1px 0;
-                outline: 0;
-                border: zero;
-                border-radius: 0;
-                box-shadow: none;
-                background: transparent !important;
                 padding: 0;
-                width: 25px;
                 height: 25px;
-                line-height: normal;
+                outline: 0;
+                border: 0 !important;
+                background: transparent !important;
+                box-shadow: none;
                 color: #999;
-                font-family: sans-serif;
                 font-size: 100%;
+                font-family: sans-serif;
+                line-height: normal;
+                border-radius: 0;
+                width: 25px;
             }
         }
-
         &.search-choice {
             position: relative;
             margin: 3px 5px 3px 0;
-            border: 1px solid #aaa;
-            border-radius: 3px;
-            box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(#000,.05);
-            background-clip: padding-box;
-            background-color: #eee;
-            background-image: linear-gradient(#f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
-            background-repeat: repeat-x;
-            background-size: 100% 19px;
-            cursor: default;
             padding: 3px 20px 3px 5px;
+            border: 1px solid #aaa;
             max-width: 100%;
-            line-height: 13px;
+            border-radius: 3px;
+            background-color: #eeeeee;
+            background-image: linear-gradient(#f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
+            background-size: 100% 19px;
+            background-repeat: repeat-x;
+            background-clip: padding-box;
+            box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(#000,.05);
             color: #333;
+            line-height: 13px;
+            cursor: default;
             span {
                 word-wrap: break-word;
             }
-
             .search-choice-close {
-                display: block;
                 position: absolute;
                 top: 4px;
                 right: 3px;
-                background: $chosen-sprite -42px 1px no-repeat;
+                display: block;
                 width: 12px;
                 height: 12px;
+                background: $chosen-sprite -42px 1px no-repeat;
                 font-size: 1px;
                 &:hover {
                     background-position: -42px -10px;
                 }
             }
         }
-
         &.search-choice-disabled {
+            padding-right: 5px;
             border: 1px solid #ccc;
             background-color: #e4e4e4;
             background-image: linear-gradient(#f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
-            padding-right: 5px;
             color: #666;
         }
-
         &.search-choice-focus {
             background: #d4d4d4;
             .search-choice-close {
@@ -302,16 +279,14 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
             }
         }
     }
-
     .chosen-results {
         margin: 0;
         padding: 0;
     }
-
     .chosen-drop .result-selected {
         display: list-item;
-        cursor: default;
         color: #ccc;
+        cursor: default;
     }
 }
 /* @end */
@@ -322,27 +297,24 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
         border: 1px solid #5897fb;
         box-shadow: 0 0 5px rgba(#000,.3);
     }
-
     &.chosen-with-drop{
         .chosen-single {
             border: 1px solid #aaa;
-            border-bottom-left-radius: 0;
-            border-bottom-right-radius: 0;
-            box-shadow: 0 1px 0 #fff inset;
-            background-image: linear-gradient(#eee 20%, #fff 80%);
-            -moz-border-radius-bottomleft: 0;
             -moz-border-radius-bottomright: 0;
+            border-bottom-right-radius: 0;
+            -moz-border-radius-bottomleft: 0;
+            border-bottom-left-radius: 0;
+            background-image: linear-gradient(#eee 20%, #fff 80%);
+            box-shadow: 0 1px 0 #fff inset;
         }
-
         .chosen-single div {
-            border-left: zero;
+            border-left: none;
             background: transparent;
             b {
                 background-position: -18px 2px;
             }
         }
     }
-
     .chosen-choices {
         border: 1px solid #5897fb;
         box-shadow: 0 0 5px rgba(#000,.3);
@@ -360,7 +332,6 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
     .chosen-single {
         cursor: default;
     }
-
     .chosen-choices .search-choice .search-choice-close {
         cursor: default;
     }
@@ -371,36 +342,30 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
 .chosen-rtl {
     text-align: right;
     .chosen-single {
-        padding: 0 8px 0 0;
         overflow: visible;
+        padding: 0 8px 0 0;
     }
-
     .chosen-single span {
         margin-right: 0;
         margin-left: 26px;
         direction: rtl;
     }
-
     .chosen-single-with-deselect span {
         margin-left: 38px;
     }
-
     .chosen-single div {
         right: auto;
         left: 3px;
     }
-
     .chosen-single abbr {
         right: auto;
         left: 26px;
     }
-
     .chosen-choices li {
         float: right;
         &.search-field input[type="text"] {
             direction: rtl;
         }
-
         &.search-choice {
             margin: 3px 5px 3px 0;
             padding: 3px 5px 3px 19px;
@@ -410,32 +375,26 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
             }
         }
     }
-
     &.chosen-container-single .chosen-results {
         margin: 0 0 4px 4px;
         padding: 0 4px 0 0;
     }
-
     .chosen-results li.group-option {
         padding-right: 15px;
         padding-left: 0;
     }
-
     &.chosen-container-active.chosen-with-drop .chosen-single div {
-        border-right: zero;
+        border-right: none;
     }
-
     .chosen-search input[type="text"] {
-        background: $chosen-sprite no-repeat -30px -20px;
         padding: 4px 5px 4px 20px;
+        background: $chosen-sprite no-repeat -30px -20px;
         direction: rtl;
     }
-
     &.chosen-container-single{
         .chosen-single div b {
             background-position: 6px 2px;
         }
-
         &.chosen-with-drop{
             .chosen-single div b {
                 background-position: -12px 2px;
@@ -456,8 +415,8 @@ $chosen-sprite-retina: url('/images/chosen-sprite@2x.png') !default;
     .chosen-container .chosen-results-scroll-down span,
     .chosen-container .chosen-results-scroll-up span {
         background-image: $chosen-sprite-retina !important;
-        background-repeat: no-repeat !important;
         background-size: 52px 37px !important;
+        background-repeat: no-repeat !important;
     }
 }
 /* @end */
