--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -1,16 +1,6 @@
 <section class="section-about">
     <h4>Über die {{theme.title}}</h4>
-    <p>Das
-        <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter
-        der Leitung von Prof. Dr. Christoph Meinel zusammen
-        mit dem
-        <a href="https://www.mint-ec.de/" target="_blank">MINT EC</a>, einem bundesweiten Exzellenznetzwerk von über
-        300 Schulen und unterstützt vom Bundesministerium für
-        Forschung und Bildung die HPI Schul-Cloud. Sie soll die technische Grundlage schaffen, dass Lehrkräfte und
-        Schüler
-        in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, so zwar so, wie Apps über
-        Smartphones
-        oder Tabletts nutzbar sind.</p>
+    <p>Das  <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/" target="_blank">MINT-EC</a>, dem nationalen Excellence-Schulnetzwerk von über 300 Schulen bundesweit und unterstützt vom Bundesministerium für Bildung und Forschung die HPI Schul-Cloud. Sie soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
     <ul>
         <li>Mehr Informationen:
             <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/publikationen/projekte/schul-cloud_beschreibung_website.pdf"
