share files form

--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -138,7 +138,7 @@
 
 {{#embed "lib/components/modal-form" class="share-modal"}}
     {{#content "fields"}}
-        {{> "files/forms/form-share-file"}}
+        {{> "files/forms/form-share-file" teamId=teamId}}
     {{/content}}
 {{/embed}}
 
