--- a/views/teams/edit-team.hbs
+++ b/views/teams/edit-team.hbs
@@ -49,7 +49,7 @@
                     <input class="box" type="checkbox" name="externalExperts" value="allowExternalExperts" checked="checked" />
                     <br>
                     <label for="members">Teilnehmer dürfen zugreifen</label>
-                    <input class="box" type="checkbox" name="members" value="allowExternalMembers" checked="checked" />
+                    <input class="box" type="checkbox" name="members" value="allowMembers" checked="checked" />
                     <br><br>
                     <i>Du kannst die Zugriffsberechtigungen für einzelne Dateien und Ordner jederzeit bearbeiten.</i>
                     <br>
