--- a/static/styles/lib/tabbar/tabbar.scss
+++ b/static/styles/lib/tabbar/tabbar.scss
@@ -31,8 +31,8 @@
 
       &.active {
         color: $primaryColor;
-        opacity: 1 !important;
-        font-weight: 700 !important;
+        opacity: 1;
+        font-weight: 700;
       }
     }
 
