--- a/views/courses/components/groups.hbs
+++ b/views/courses/components/groups.hbs
@@ -19,7 +19,7 @@
   </div>
   <div class="col-sm-12">
     {{#userHasPermission "COURSEGROUP_CREATE"}}
-      <a href="/courses/{{../../_id}}/groups/add" class="btn btn-primary w-100 pull-right" title="Gruppe hinzufügen">
+      <a href="/courses/{{../id}}/groups/add" class="btn btn-primary w-100 pull-right" title="Gruppe hinzufügen">
         <i class="fa fa-plus" aria-hidden="true"></i><span> Schülergruppe hinzufügen</span>
       </a>
     {{/userHasPermission}}
