--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -58,6 +58,10 @@ a[data-toggle="collapse"]:focus{
 	text-decoration:none !important;
 }
 
+img{
+	max-width: 100%;
+}
+
 .btn-link{
 	margin: 0;
 	padding: 0;
