--- a/views/help/clickable-card.hbs
+++ b/views/help/clickable-card.hbs
@@ -2,7 +2,7 @@
     <div class="row">
         {{#each clickable}}
             <div class="link-wrapper col-xs-6 {{../link-class}} col-md">
-                <a href="{{this.link}}"
+                <a href="{{this.src}}"
                     target="_blank"
                     title="{{this.title}}">
                     <span>
